# codex

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .ocamlformat  .ocamlformat-ignore  CONTRIBUTING.org  ChangeLog.org  Dockerfile.alpine  Dockerfile.debian  META  Makefile  Makefile.common  README.md  README.org  binsec_codex.opam  codex.ml  codex.opam  codex.opam.template  codex_config.ml  codex_log.ml  domains.ml  dune  dune-project  frama_c_codex.opam  libc.c  test.sh
binsec/: analysis_settings.ml  analyze.ml  arch_settings.mli  benchmark.ml  binsec_codex.ml  builtin_types.ml  builtin_types.mli  cfg_analysis.ml  cfg_analysis.mli  codex.ml  codex_logger.ml  codex_logger.mli  codex_main.ml  codex_options.ml  dba2Codex.ml  dba2Codex.mli  dhunk_analysis.ml  dhunk_analysis.mli  dune  dune-project  heap_typing.ml  heap_typing.mli  hooks.ml  hooks.mli  html.ml  interval2symbol.ml  interval2symbol.mli  record_cfg.ml  record_cfg.mli  x86_arch.ml  x86_arch.mli
constraints/: constraints.ml  constraints_aliases.ml  constraints_condition.ml  constraints_const_eval.ml  constraints_const_eval.mli  constraints_constraints.ml  constraints_constraints.mli  constraints_constraints_sig.ml  constraints_slicing.ml  constraints_slicing.mli  constraints_smt.ml  constraints_smt.mli  dune  relations.ml  relations.mli  relations_test.ml
doc/types-tutorial/: Types tutorial.mld  bin_output.html  dune  example-lasso.typedc  example-nn-ptr.typedc  example-param.typedc  example-refined.typedc  example-sugar.typedc  example.c  example.typedc  example_full.c  output.html
doc/while-tutorial/: While tutorial - chapter 1.mld  While tutorial - chapter 2.mld  While tutorial - chapter 3.mld  While tutorial - chapter 4.mld  While tutorial.mld  analysis_sva.ml  cinterpreter.ml  cinterpreter.mli  dune  ppx_while.ml  while_analysis.ml  while_ast.ml  while_ast.mli  while_codex.ml  while_examples.ml
domains/: assert_False_Transfer_Functions.ml  assert_false_domain.ml  bitwise.ml  bitwise.mli  bitwise_domain.ml  bitwise_domain.mli  constraint_domain2.ml  constraint_domain2.mli  constraint_domains_sig.mli  domain_sig.ml  dune  evaluating.mli  extend.ml  extend.mli  integer2binary.ml  integer2binary.mli  lift_integer_domain_to_binary_domain.ml  lift_integer_domain_to_binary_domain.mli  log.ml  loop_domain.ml  memory_sig.mli  overflow_checks.ml  overflow_checks.mli  prod_domain.ml  product.ml  sig.ml  term_based_sig.mli  term_domain.ml  term_domain.mli  with_Noop.ml
domains/constraints/: domains_constraints_assert_false.ml  domains_constraints_assert_false.mli  domains_constraints_constraint_propagation.ml  domains_constraints_constraint_propagation.mli  domains_constraints_nonrelational.ml  domains_constraints_nonrelational.mli  domains_constraints_overflow_check.ml  domains_constraints_overflow_check.mli  domains_constraints_product.ml  domains_constraints_product.mli  domains_constraints_unionfind_builder.ml  domains_constraints_unionfind_builder.mli
domains/memory/: assert_False_Memory_Transfer_Functions.ml  fully_expanded_finite_region.ml  fully_expanded_finite_region.mli  memory_domain.ml  memory_domain.mli  memory_sig.ml  region_numeric_offset.ml  region_numeric_offset.mli  region_separation.ml  region_separation.mli  region_suffix_tree.ml  region_suffix_tree.mli  type_domain.ml  type_domain.mli  typed_address.ml  typed_address.mli  typed_memory_domain.ml  typed_memory_domain.mli  value_to_region.ml  value_to_region.mli  value_union_concatenation.ml  wholify.ml  (+4 more)
frama-c/: C2Codex.ml  C2Codex.mli  Makefile  build_semantic_equations.ml  codexPlugin.ml  codex_options.ml  codex_register.ml  direct_analysis.ml  dune  dune-project  exp_dump.ml  exp_dump.mli  frama-c-codex.opam  frama-c-codex.opam.template  frama_c_alarms.ml  frama_c_codex.ml  globals_needed.ml  globals_needed.mli  interpreted_automata_regexp.ml  interpreted_automata_regexp.mli  printhtml.ml  printhtml.mli  reduce.sh  region_analysis_stmt.ml  region_analysis_stmt.mli  test.types  test_types.ml  varinfo_Enclosing_Function.ml  varinfo_Enclosing_Function.mli
single_value_abstraction/: basis_Assert_False_Transfer_Functions.ml  basis_noop_transfer_functions.ml  basis_prod.ml  basis_prod.mli  basis_sig.ml  binary_collecting.ml  binary_collecting.mli  binary_test.ml  binary_to_integer_basis.ml  binary_to_integer_basis.mli  dummy_basis.ml  dune  ival_basis.ml  ival_basis.mli  ival_with_sentinel_basis.ml  ival_with_sentinel_basis.mli  known_bits_basis.ml  quadrivalent_basis.ml  quadrivalent_basis.mli  reduced_prod_basis.ml  reduced_prod_basis.mli  sentinel_basis.ml  sentinel_basis.mli  single_value_abstraction.ml  sva_Assert_False_Transfer_Functions.ml  sva_binary_to_integer.ml  sva_binary_to_integer.mli  sva_bitfield.ml  sva_bitfield.mli  sva_dummy.ml  sva_ival.ml  sva_ival.mli  sva_ival_with_sentinel.ml  sva_ival_with_sentinel.mli  sva_known_bits.ml  sva_log.ml  sva_log.mli  sva_noop_transfer_functions.ml  sva_prod.ml  sva_prod.mli  (+8 more)
terms/: builder.ml  builder.mli  condition.ml  const_eval.ml  const_eval.mli  dune  relations.ml  relations.mli  relations_test.ml  sig.mli  slicing.ml  slicing.mli  smt.ml  smt.mli
types/: ctypes.ml  ctypes.mli  dune  parse_ctypes.ml  parse_ctypes.mli  test.types  type_check_tree.ml  type_check_tree.mli  type_lexer.mll  type_parse_tree.ml  type_parser.ml  type_parser.mli  type_parser.mly  typedC.ml  typedC.mli  types.ml
utils/: bdd.ml  bdd.mli  condition_map.ml  condition_map.mli  cuddfix_c.c  datatype_sig.ml  datatype_sig.mli  dune  dynamic_array.ml  dynamic_array.mli  emit_alarm.ml  emit_alarm.mli  extstdlib.ml  extstdlib.mli  file_to_html.ml  file_to_html.mli  hashing.ml  hashing.mli  hetHashtbl.ml  hetHashtbl.mli  hook.ml  hook.mli  immutable_array.ml  immutable_array.mli  immutable_dynamic_array.ml  immutable_dynamic_array.mli  int_builtins.ml  int_builtins_c.c  int_builtins_ml.ml  int_builtins_tests.ml  interval_map.ml  interval_map.mli  mutable_radix_trie.ml  mutable_radix_trie.mli  not_implemented.ml  okasakimap.ml  okasakimap.mli  okasakiset.ml  okasakiset.mli  online_nearest_common_ancestor_skiplist.ml  (+20 more)
(+627 files in other folders)
