;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;  This file is part of the Codex semantics library.                     ;;
;;                                                                        ;;
;;  Copyright (C) 2013-2024                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE).                      ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

;; We separate between a single-module executable, and a library with everything else.

(library
  (public_name "binsec_codex.lib")
  (name binsec_codex_lib)
  (flags :standard -warn-error -a+31 -w -27-26-32 -open Binsec)
  (modules (:standard \ binsec_codex codex_main))
  (modules_without_implementation arch_settings)
  (libraries binsec
  codex
  codex.transfer_functions codex.datatype_sig codex.lattices codex.domains
              codex.single_value_abstraction codex.constraints codex.codex_log codex.smtbackend
              codex.types zarith  codex.codex_config codex.extstdlib codex.interval_map
              codex.framac_ival codex.utils.immutable_array
              codex.utils.okasakimap cudd
              codex.condition_map codex.fixpoint
                                 

))



(executable
  (package binsec_codex)
  (public_name binsec_codex)
  (flags (:standard -open Binsec -open Binsec_codex_lib))
  (modules binsec_codex codex_main)
  (libraries binsec_codex.lib binsec codex.codex_config)
 (foreign_stubs (language c) (names binsec_cudd))
)

