;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;  This file is part of the Codex semantics library.                     ;;
;;                                                                        ;;
;;  Copyright (C) 2013-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE).                      ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; -*- mode:lisp -*-

(include_subdirs qualified)

(library
  (public_name "codex.domains")
  (name domains)
  (flags -w +a-3-4-6-9-40-41-42-44-45-48-34-27-32-60-37-20-67-70)
  (libraries codex.operator codex.emit_alarm codex.datatype_sig codex.lattices
             codex.single_value_abstraction codex.terms codex.codex_log codex.smtbackend
             codex.types zarith  codex.codex_config codex.extstdlib codex.interval_map
             codex.framac_ival codex.utils.immutable_array
             cudd patricia-tree
             codex.condition_map bheap tracelog
             codex.union_find codex.units
             codex.hashing fmt)

  (modules :standard \ evaluating)
  (modules_without_implementation term_based_sig memory_sig))
